# uk-areacodes-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot-PR.yml  build.yml  rust-clippy.yml  rust.yml
examples/: basic.rs  main.rs  main_one.rs
src/: data_source.rs  lib.rs  main.rs
tests/: basic_integration_test.rs
